--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://realknoblauchbrot.github.io/knobidev",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && cp build/index.html build/404.html",
+    "build": "tsc -b && vite build && cp dist/index.html dist/404.html",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
